--- a/css/index.css
+++ b/css/index.css
@@ -27,7 +27,13 @@ body{
 }
 /* header */
 #headerWrap{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     padding: 10px 20px;
+
+    background-color:rgba(255,255,255, 0.6);
 }
 #headerWrap h1{
     font-size: 1.4rem;
@@ -35,4 +41,12 @@ body{
 #headerWrap .headerMenu li{
     float: left;
     padding: 0 10px;
+}
+/* section */
+/* about */
+#about{
+    width : 100%;
+	height : 100vh;
+	/* padding-top : calc(100vh/100% * 100%); calc (이미지 높이 ÷ 이미지 가로 × 100 %) */
+	background : url('/image/background1.jpg') center center / cover no-repeat;
 }
