--- a/css/index.css
+++ b/css/index.css
@@ -20,6 +20,24 @@
     display: table-cell;
     vertical-align: middle;
 }
+.topUp{
+    position: absolute;
+    bottom: 40px;
+    right: 40px;
+}
+.topUp{
+    width: 35px;
+    height: 35px;
+    border: 1px solid #ffffff;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    text-align: center;
+    cursor: pointer;
+}
+.topUp i{
+    vertical-align: middle;
+    color: #ffffff;
+}
 /* body */
 body{
     font-size: 14px;
@@ -32,6 +50,7 @@ body{
     left: 0;
     width: 100%;
     padding: 10px 20px;
+    z-index: 9999;
 
     background-color:rgba(255,255,255, 0.6);
 }
@@ -45,8 +64,17 @@ body{
 /* section */
 /* about */
 #about{
+    position: relative;
     width : 100%;
 	height : 100vh;
 	/* padding-top : calc(100vh/100% * 100%); calc (이미지 높이 ÷ 이미지 가로 × 100 %) */
 	background : url('/image/background1.jpg') center center / cover no-repeat;
+}
+#about header{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+
+    color: #ffffff;
 }
