--- a/css/index.css
+++ b/css/index.css
@@ -62,19 +62,46 @@ body{
     padding: 0 10px;
 }
 /* section */
-/* about */
-#about{
-    position: relative;
+.section{
     width : 100%;
 	height : 100vh;
+}
+/* main */
+#main{
+    position: relative;
 	/* padding-top : calc(100vh/100% * 100%); calc (이미지 높이 ÷ 이미지 가로 × 100 %) */
 	background : url('/image/background1.jpg') center center / cover no-repeat;
 }
-#about header{
+#main header{
     position: absolute;
     top: 50%;
     left: 50%;
     text-align: center;
 
     color: #ffffff;
+}
+/* about */
+#about .content{
+    width: 50%;
+    padding: 0 10px;
+}
+#about .table{
+    height: 70vh;
+}
+#about dl{
+    margin-bottom: 25px;
+}
+#about dl dt{
+    margin-bottom: 15px;
+}
+#about dl dt span{
+    display: inline-block;
+    padding-bottom: 10px;
+    border-bottom: 2px solid #898989;
+}
+#about .year{
+    width: 100%;
+}
+#about .year ul li{
+    float: left;
 }
