--- a/css/index.css
+++ b/css/index.css
@@ -87,6 +87,9 @@ body{
     color: #ffffff;
 }
 /* about */
+#about{
+    padding: 0 30px;
+}
 #about .content{
     width: 50%;
     padding: 0 10px;
