--- a/css/index.css
+++ b/css/index.css
@@ -82,9 +82,12 @@ body{
     position: absolute;
     top: 50%;
     left: 50%;
+    margin-left: -180px;
     text-align: center;
 
-    color: #ffffff;
+    padding: 20px 35px;
+    background-color: rgba(255, 255, 255, .4);
+    color: #2b6a9e;
 }
 /* about */
 #about{
@@ -156,7 +159,17 @@ body{
     background-color: #898989;
 }
 #about .year .line{
+    position: relative;
     width: 100%;
     height: 2px;
     background-color: #898989;
+}
+#about .year .line .btnSlider{
+    position: absolute;
+    right: -12px;
+    top: 50%;
+    margin-top: -14px;
+}
+#about .year .line .btnSlider i{
+    color: #898989;
 }
