--- a/css/index.css
+++ b/css/index.css
@@ -116,9 +116,12 @@ body{
 #about dl dt span i{
     padding-right: 5px;
 }
+#about dl dd{
+    word-break: break-all;
+}
 #about .picWrap div{
-    width: 80%;
-    height: 70%;
+    width: 100%;
+    height: 100%;
     margin: 0 auto;
     background-color: #898989;
 }
