--- a/css/index.css
+++ b/css/index.css
@@ -70,14 +70,21 @@ body{
     width : 100%;
 	height : 100vh;
 }
+.section + .section{
+    margin-top: 50px;
+}
+section h2{
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 2em;
+}
 /* main */
 #main{
     display: table;
     position: relative;
     font-size: 4em;
-    text-align: center;
-    background-color: #000000;
-    color: #ffffff;
+    background-color: #c9ebf1;
+    color: #69869C;
     /* padding-top : calc(100vh/100% * 100%); calc (이미지 높이 ÷ 이미지 가로 × 100 %) */
 	/* background : url('/image/background1.jpg') center center / cover no-repeat; */
 }
@@ -87,7 +94,7 @@ body{
 
     padding: 20px 35px;
 }
-#main span{
+/* #main span{
     opacity: 0;
     transition: all .5s ease;
     transform: translateY(50px);
@@ -97,10 +104,7 @@ body{
     opacity: 1;
     transform: translateY(0px);
     color: rgb(105, 165, 206);
-}
-#main  header p{
-    display: inline-block;
-}
+} */
 #main .cursor{
     animation: cursor 0.4s infinite;
 }
@@ -197,6 +201,32 @@ body{
 #about .year .line .btnSlider i{
     color: #898989;
 }
+
+/* my work start */
+#work h2{
+   
+}
+#work ul{
+    width: 100%;
+}
+#work ul li{
+    padding: 0 1em;
+    display: flex;
+    justify-content:space-around;
+}
+#work ul li .imgWrap{
+    overflow: hidden;
+}
+#work ul li .imgWrap,
+#work ul li .txt{
+    width: 50%;
+}
+#work ul li img{
+    max-width: 100%;
+    border-radius: 15px;
+}
+
+/* footer start */
 #footer{
     height: 60px;
     line-height: 60px;
